Fix game canvas having scroll bars at full size
Due the canvas being set at full size and the body being larger.
Setting the height and width of the menu element resolves the
issue of the horizontal scroll bar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+body {
+    margin: 0;
+}
+
+.menu {
+    width: 100vw;
+    height: 100vh;
+    display: none;
+}
+
 canvas {
     background-color: skyblue;
 }
